[package]
name = "feldspar-map"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.7"
either = "1.6"
float-ord = "0.3"
futures = "0.3"
grid-ray = { git = "https://github.com/bonsairobo/grid-ray-rs", rev = "21808fea5ce12586c898e5b2adabfe11d75b0291" }
grid-tree = { git = "https://github.com/bonsairobo/grid-tree-rs", rev = "867bf6ce8bb31d12b76c032b7c9e2811896b2784" }
itertools = "0.10"
log = "0.4"
lz4_flex = "0.9"
parking_lot = "0.11"
# NB: need 8-byte alignment guarantee from sled on main branch; not in stable release yet
sled = { git = "https://github.com/spacejam/sled", rev = "c840fe7e" }
smallvec = "1.7"
vox-format = "0.1"

bevy = { version = "0.5", optional = true, default-features = false }

feldspar-core = { path = "../feldspar-core/", version = "0.1" }

[dependencies.ndshape]
git = "https://github.com/bonsairobo/ndshape-rs"
rev = "d184932"


[dev-dependencies]
crossbeam = "0.8"
